working typed fetch from react native
